# shopfloor-ai-assistant

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/: intent_classifier.py  safety_guardrails.py
