[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopfloor-ai-assistant"
version = "0.1.0"
description = "Voice-enabled AI assistant for manufacturing shopfloor"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "openai-whisper>=20231117",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "transformers>=4.35.0",
    "sounddevice>=0.4.6",
    "pydub>=0.25.1",
    "elevenlabs>=0.2.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "mypy>=1.7.0"
]
